Fix the text overflow in the title is too long without space and use h4.

--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -6,6 +6,10 @@
   margin-top: 0.5em;
 }
 
+.word-break {
+  word-break: break-all;
+}
+
 .story-description {
   margin-bottom: 25px;
   font-size: 15px;
